--- a/calciP.html
+++ b/calciP.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Calculator</title>
-    <link href="/CSS/calciP.css" rel="stylesheet" type="text/css"/>
-    <link href="/CSS/utilis.css" rel="stylesheet" type="text/css"/>
+    <link href="/task1/calciP.css" rel="stylesheet" type="text/css"/>
+    <link href=/task1/utilis.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
@@ -47,7 +47,7 @@
             <button class="button">-</button>
         </div>
     </div> 
-    <script src="/JS/calculator.js"></script>
+    <script src="/task1/calculator.js"></script>
     
 </body>
 </html>
